k8s/components/apps/communication/snappymail/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: snappymail
spec:
  type: ClusterIP
  selector:
    app: snappymail
  ports:
    - name: http
      port: 8888
      targetPort: 8888
