k8s/components/apps/communication/snappymail/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: snappymail-ingress
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`webmail.example.com`)
      kind: Rule
      services:
        - name: snappymail
          port: 8888
